# celeste-extractor

./: .gitignore  README.md  pyproject.toml
celex/: Texture2DPlugin.py  __main__.py  decode.py  filefind.py  fileio.py
output/: .gitignore
